--- a/cifar10.ipynb
+++ b/cifar10.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0b2e7f67",
+   "id": "c30a0654",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "daf17029",
+   "id": "f57c208b",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f72ed465",
+   "id": "1d8a8b95",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5bf14826",
+   "id": "a22a5240",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fa05ad93",
+   "id": "52fbec30",
    "metadata": {},
    "outputs": [
     {
@@ -2893,7 +2893,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "37836f87",
+   "id": "127d367d",
    "metadata": {},
    "outputs": [
     {
@@ -3025,7 +3025,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "45576702",
+   "id": "d317a615",
    "metadata": {},
    "outputs": [
     {
@@ -3381,7 +3381,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cf5a42e5",
+   "id": "c7cd8c0a",
    "metadata": {},
    "outputs": [
     {
@@ -3536,7 +3536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ca08036",
+   "id": "53bb6674",
    "metadata": {},
    "outputs": [
     {
@@ -3553,14 +3553,178 @@
       "\n",
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
-      "Numper of global epochs = 100\n",
-      "Round   0 fedavg, Accuracy 10.010, Loss 2.302, Accum Power: 79.000\n",
-      "Round   0 ibcs, Accuracy 10.000, Loss 2.303, Accum Power: 0.000\n",
-      "Round   0 pp, Accuracy 10.180, Loss 2.302, Accum Power: 0.000\n",
-      "Round   1 fedavg, Accuracy 13.230, Loss 2.299, Accum Power: 79.000\n",
-      "Round   1 ibcs, Accuracy 10.000, Loss 2.301, Accum Power: 0.000\n",
-      "Round   1 pp, Accuracy 16.220, Loss 2.296, Accum Power: 0.000\n",
-      "Round   2 fedavg, Accuracy 17.510, Loss 2.294, Accum Power: 79.000\n"
+      "Numper of global epochs = 1000\n",
+      "Number of local epochs = 10\n",
+      "Batch size = 32\n",
+      "Round   0 fedavg, Accuracy 10.010, Loss 2.303, Accum Power: 0.000\n",
+      "Round   0 ibcs, Accuracy 10.030, Loss 2.301, Accum Power: 0.000\n",
+      "Round   0 pp, Accuracy 11.750, Loss 2.296, Accum Power: 0.000\n",
+      "Round   1 fedavg, Accuracy 12.230, Loss 2.300, Accum Power: 73.000\n",
+      "Round   1 ibcs, Accuracy 15.840, Loss 2.297, Accum Power: 0.000\n",
+      "Round   1 pp, Accuracy 18.460, Loss 2.251, Accum Power: 0.000\n",
+      "Round   2 fedavg, Accuracy 15.900, Loss 2.294, Accum Power: 73.000\n",
+      "Round   2 ibcs, Accuracy 17.450, Loss 2.284, Accum Power: 0.000\n",
+      "Round   2 pp, Accuracy 24.540, Loss 2.101, Accum Power: 0.000\n",
+      "Round   3 fedavg, Accuracy 16.220, Loss 2.263, Accum Power: 149.000\n",
+      "Round   3 ibcs, Accuracy 20.650, Loss 2.189, Accum Power: 0.000\n",
+      "Round   3 pp, Accuracy 28.710, Loss 1.991, Accum Power: 74.000\n",
+      "Round   4 fedavg, Accuracy 22.990, Loss 2.148, Accum Power: 149.000\n",
+      "Round   4 ibcs, Accuracy 28.310, Loss 1.993, Accum Power: 0.000\n",
+      "Round   4 pp, Accuracy 30.730, Loss 1.932, Accum Power: 74.000\n",
+      "Round   5 fedavg, Accuracy 27.720, Loss 2.018, Accum Power: 149.000\n",
+      "Round   5 ibcs, Accuracy 31.350, Loss 1.918, Accum Power: 0.000\n",
+      "Round   5 pp, Accuracy 32.220, Loss 1.872, Accum Power: 74.000\n",
+      "Round   6 fedavg, Accuracy 31.560, Loss 1.920, Accum Power: 149.000\n",
+      "Round   6 ibcs, Accuracy 33.430, Loss 1.853, Accum Power: 0.000\n",
+      "Round   6 pp, Accuracy 34.620, Loss 1.807, Accum Power: 74.000\n",
+      "Round   7 fedavg, Accuracy 33.850, Loss 1.837, Accum Power: 149.000\n",
+      "Round   7 ibcs, Accuracy 35.570, Loss 1.787, Accum Power: 0.000\n",
+      "Round   7 pp, Accuracy 37.170, Loss 1.727, Accum Power: 74.000\n",
+      "Round   8 fedavg, Accuracy 36.500, Loss 1.750, Accum Power: 149.000\n",
+      "Round   8 ibcs, Accuracy 37.690, Loss 1.728, Accum Power: 0.000\n",
+      "Round   8 pp, Accuracy 39.360, Loss 1.656, Accum Power: 74.000\n",
+      "Round   9 fedavg, Accuracy 39.290, Loss 1.670, Accum Power: 149.000\n",
+      "Round   9 ibcs, Accuracy 39.480, Loss 1.675, Accum Power: 0.000\n",
+      "Round   9 pp, Accuracy 41.210, Loss 1.604, Accum Power: 74.000\n",
+      "Round  10 fedavg, Accuracy 40.610, Loss 1.625, Accum Power: 149.000\n",
+      "Round  10 ibcs, Accuracy 40.750, Loss 1.640, Accum Power: 0.000\n",
+      "Round  10 pp, Accuracy 42.780, Loss 1.569, Accum Power: 74.000\n",
+      "Round  11 fedavg, Accuracy 42.300, Loss 1.588, Accum Power: 149.000\n",
+      "Round  11 ibcs, Accuracy 41.640, Loss 1.611, Accum Power: 0.000\n",
+      "Round  11 pp, Accuracy 43.830, Loss 1.558, Accum Power: 74.000\n",
+      "Round  12 fedavg, Accuracy 43.930, Loss 1.546, Accum Power: 224.000\n",
+      "Round  12 ibcs, Accuracy 42.550, Loss 1.593, Accum Power: 0.000\n",
+      "Round  12 pp, Accuracy 44.920, Loss 1.540, Accum Power: 74.000\n",
+      "Round  13 fedavg, Accuracy 44.980, Loss 1.522, Accum Power: 224.000\n",
+      "Round  13 ibcs, Accuracy 43.780, Loss 1.588, Accum Power: 0.000\n",
+      "Round  13 pp, Accuracy 46.190, Loss 1.551, Accum Power: 74.000\n",
+      "Round  14 fedavg, Accuracy 46.030, Loss 1.510, Accum Power: 302.000\n",
+      "Round  14 ibcs, Accuracy 44.220, Loss 1.591, Accum Power: 0.000\n",
+      "Round  14 pp, Accuracy 46.810, Loss 1.583, Accum Power: 74.000\n",
+      "Round  15 fedavg, Accuracy 46.800, Loss 1.502, Accum Power: 302.000\n",
+      "Round  15 ibcs, Accuracy 44.970, Loss 1.596, Accum Power: 61.000\n",
+      "Round  15 pp, Accuracy 47.100, Loss 1.635, Accum Power: 135.000\n",
+      "Round  16 fedavg, Accuracy 47.600, Loss 1.499, Accum Power: 372.000\n",
+      "Round  16 ibcs, Accuracy 45.980, Loss 1.628, Accum Power: 61.000\n",
+      "Round  16 pp, Accuracy 47.390, Loss 1.700, Accum Power: 135.000\n",
+      "Round  17 fedavg, Accuracy 48.190, Loss 1.499, Accum Power: 442.000\n",
+      "Round  17 ibcs, Accuracy 46.530, Loss 1.662, Accum Power: 61.000\n",
+      "Round  17 pp, Accuracy 47.570, Loss 1.763, Accum Power: 135.000\n",
+      "Round  18 fedavg, Accuracy 49.000, Loss 1.517, Accum Power: 511.000\n",
+      "Round  18 ibcs, Accuracy 46.760, Loss 1.731, Accum Power: 61.000\n",
+      "Round  18 pp, Accuracy 47.580, Loss 1.848, Accum Power: 135.000\n",
+      "Round  19 fedavg, Accuracy 49.230, Loss 1.557, Accum Power: 581.000\n",
+      "Round  19 ibcs, Accuracy 47.020, Loss 1.793, Accum Power: 61.000\n",
+      "Round  19 pp, Accuracy 47.330, Loss 1.925, Accum Power: 209.000\n",
+      "Round  20 fedavg, Accuracy 49.260, Loss 1.584, Accum Power: 801.000\n",
+      "Round  20 ibcs, Accuracy 46.880, Loss 1.881, Accum Power: 61.000\n",
+      "Round  20 pp, Accuracy 47.600, Loss 1.954, Accum Power: 209.000\n",
+      "Round  21 fedavg, Accuracy 49.350, Loss 1.629, Accum Power: 801.000\n",
+      "Round  21 ibcs, Accuracy 46.880, Loss 1.943, Accum Power: 61.000\n",
+      "Round  21 pp, Accuracy 47.430, Loss 2.005, Accum Power: 209.000\n",
+      "Round  22 fedavg, Accuracy 49.070, Loss 1.674, Accum Power: 956.000\n",
+      "Round  22 ibcs, Accuracy 46.620, Loss 2.016, Accum Power: 61.000\n",
+      "Round  22 pp, Accuracy 47.620, Loss 2.057, Accum Power: 287.000\n",
+      "Round  23 fedavg, Accuracy 49.450, Loss 1.714, Accum Power: 1031.000\n",
+      "Round  23 ibcs, Accuracy 46.780, Loss 2.079, Accum Power: 61.000\n",
+      "Round  23 pp, Accuracy 47.980, Loss 2.072, Accum Power: 287.000\n",
+      "Round  24 fedavg, Accuracy 49.820, Loss 1.740, Accum Power: 1031.000\n",
+      "Round  24 ibcs, Accuracy 46.700, Loss 2.112, Accum Power: 61.000\n",
+      "Round  24 pp, Accuracy 47.580, Loss 2.107, Accum Power: 287.000\n",
+      "Round  25 fedavg, Accuracy 49.880, Loss 1.766, Accum Power: 1031.000\n",
+      "Round  25 ibcs, Accuracy 46.690, Loss 2.144, Accum Power: 61.000\n",
+      "Round  25 pp, Accuracy 47.720, Loss 2.127, Accum Power: 287.000\n",
+      "Round  26 fedavg, Accuracy 49.710, Loss 1.774, Accum Power: 1031.000\n",
+      "Round  26 ibcs, Accuracy 46.670, Loss 2.186, Accum Power: 61.000\n",
+      "Round  26 pp, Accuracy 47.760, Loss 2.136, Accum Power: 287.000\n",
+      "Round  27 fedavg, Accuracy 50.100, Loss 1.802, Accum Power: 1108.000\n",
+      "Round  27 ibcs, Accuracy 46.530, Loss 2.203, Accum Power: 122.000\n",
+      "Round  27 pp, Accuracy 47.690, Loss 2.160, Accum Power: 287.000\n",
+      "Round  28 fedavg, Accuracy 50.010, Loss 1.807, Accum Power: 1185.000\n",
+      "Round  28 ibcs, Accuracy 46.880, Loss 2.220, Accum Power: 122.000\n",
+      "Round  28 pp, Accuracy 47.730, Loss 2.180, Accum Power: 287.000\n",
+      "Round  29 fedavg, Accuracy 50.170, Loss 1.835, Accum Power: 1246.000\n",
+      "Round  29 ibcs, Accuracy 46.780, Loss 2.254, Accum Power: 122.000\n",
+      "Round  29 pp, Accuracy 47.520, Loss 2.179, Accum Power: 287.000\n",
+      "Round  30 fedavg, Accuracy 50.230, Loss 1.840, Accum Power: 1323.000\n",
+      "Round  30 ibcs, Accuracy 46.830, Loss 2.280, Accum Power: 122.000\n",
+      "Round  30 pp, Accuracy 47.840, Loss 2.205, Accum Power: 287.000\n",
+      "Round  31 fedavg, Accuracy 50.160, Loss 1.842, Accum Power: 1401.000\n",
+      "Round  31 ibcs, Accuracy 46.780, Loss 2.280, Accum Power: 182.000\n",
+      "Round  31 pp, Accuracy 47.950, Loss 2.228, Accum Power: 287.000\n",
+      "Round  32 fedavg, Accuracy 49.910, Loss 1.878, Accum Power: 1540.000\n",
+      "Round  32 ibcs, Accuracy 47.060, Loss 2.285, Accum Power: 182.000\n",
+      "Round  32 pp, Accuracy 47.630, Loss 2.232, Accum Power: 287.000\n",
+      "Round  33 fedavg, Accuracy 50.090, Loss 1.867, Accum Power: 1601.000\n",
+      "Round  33 ibcs, Accuracy 46.940, Loss 2.298, Accum Power: 182.000\n",
+      "Round  33 pp, Accuracy 47.670, Loss 2.263, Accum Power: 287.000\n",
+      "Round  34 fedavg, Accuracy 50.320, Loss 1.858, Accum Power: 1738.000\n",
+      "Round  34 ibcs, Accuracy 47.110, Loss 2.314, Accum Power: 182.000\n",
+      "Round  34 pp, Accuracy 47.680, Loss 2.290, Accum Power: 287.000\n",
+      "Round  35 fedavg, Accuracy 50.220, Loss 1.887, Accum Power: 1799.000\n",
+      "Round  35 ibcs, Accuracy 46.990, Loss 2.338, Accum Power: 182.000\n",
+      "Round  35 pp, Accuracy 47.790, Loss 2.305, Accum Power: 355.000\n",
+      "Round  36 fedavg, Accuracy 50.300, Loss 1.883, Accum Power: 1799.000\n",
+      "Round  36 ibcs, Accuracy 47.050, Loss 2.343, Accum Power: 182.000\n",
+      "Round  36 pp, Accuracy 47.560, Loss 2.320, Accum Power: 355.000\n",
+      "Round  37 fedavg, Accuracy 49.940, Loss 1.915, Accum Power: 1799.000\n",
+      "Round  37 ibcs, Accuracy 47.280, Loss 2.363, Accum Power: 182.000\n",
+      "Round  37 pp, Accuracy 47.600, Loss 2.326, Accum Power: 355.000\n",
+      "Round  38 fedavg, Accuracy 50.440, Loss 1.893, Accum Power: 1872.000\n",
+      "Round  38 ibcs, Accuracy 47.110, Loss 2.389, Accum Power: 182.000\n",
+      "Round  38 pp, Accuracy 47.400, Loss 2.338, Accum Power: 355.000\n",
+      "Round  39 fedavg, Accuracy 50.620, Loss 1.914, Accum Power: 2021.000\n",
+      "Round  39 ibcs, Accuracy 46.940, Loss 2.396, Accum Power: 182.000\n",
+      "Round  39 pp, Accuracy 47.270, Loss 2.346, Accum Power: 355.000\n",
+      "Round  40 fedavg, Accuracy 50.640, Loss 1.890, Accum Power: 2082.000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Round  40 ibcs, Accuracy 46.930, Loss 2.414, Accum Power: 182.000\n",
+      "Round  40 pp, Accuracy 47.420, Loss 2.368, Accum Power: 355.000\n",
+      "Round  41 fedavg, Accuracy 51.010, Loss 1.898, Accum Power: 2149.000\n",
+      "Round  41 ibcs, Accuracy 47.130, Loss 2.436, Accum Power: 182.000\n",
+      "Round  41 pp, Accuracy 47.270, Loss 2.387, Accum Power: 355.000\n",
+      "Round  42 fedavg, Accuracy 50.930, Loss 1.900, Accum Power: 2297.000\n",
+      "Round  42 ibcs, Accuracy 47.160, Loss 2.436, Accum Power: 182.000\n",
+      "Round  42 pp, Accuracy 47.190, Loss 2.391, Accum Power: 355.000\n",
+      "Round  43 fedavg, Accuracy 50.760, Loss 1.890, Accum Power: 2369.000\n",
+      "Round  43 ibcs, Accuracy 47.020, Loss 2.445, Accum Power: 182.000\n",
+      "Round  43 pp, Accuracy 47.080, Loss 2.423, Accum Power: 355.000\n",
+      "Round  44 fedavg, Accuracy 50.950, Loss 1.921, Accum Power: 2369.000\n",
+      "Round  44 ibcs, Accuracy 46.910, Loss 2.469, Accum Power: 182.000\n",
+      "Round  44 pp, Accuracy 47.230, Loss 2.395, Accum Power: 355.000\n",
+      "Round  45 fedavg, Accuracy 50.730, Loss 1.903, Accum Power: 2445.000\n",
+      "Round  45 ibcs, Accuracy 47.100, Loss 2.485, Accum Power: 245.000\n",
+      "Round  45 pp, Accuracy 47.380, Loss 2.422, Accum Power: 355.000\n",
+      "Round  46 fedavg, Accuracy 50.980, Loss 1.915, Accum Power: 2521.000\n",
+      "Round  46 ibcs, Accuracy 46.740, Loss 2.486, Accum Power: 245.000\n",
+      "Round  46 pp, Accuracy 47.330, Loss 2.434, Accum Power: 355.000\n",
+      "Round  47 fedavg, Accuracy 51.430, Loss 1.936, Accum Power: 2521.000\n",
+      "Round  47 ibcs, Accuracy 46.600, Loss 2.499, Accum Power: 245.000\n",
+      "Round  47 pp, Accuracy 47.550, Loss 2.454, Accum Power: 355.000\n",
+      "Round  48 fedavg, Accuracy 51.170, Loss 1.922, Accum Power: 2594.000\n",
+      "Round  48 ibcs, Accuracy 46.760, Loss 2.511, Accum Power: 245.000\n",
+      "Round  48 pp, Accuracy 47.650, Loss 2.479, Accum Power: 355.000\n",
+      "Round  49 fedavg, Accuracy 51.230, Loss 1.936, Accum Power: 2667.000\n",
+      "Round  49 ibcs, Accuracy 46.620, Loss 2.520, Accum Power: 245.000\n",
+      "Round  49 pp, Accuracy 47.480, Loss 2.472, Accum Power: 355.000\n",
+      "Round  50 fedavg, Accuracy 51.390, Loss 1.935, Accum Power: 2740.000\n",
+      "Round  50 ibcs, Accuracy 46.550, Loss 2.537, Accum Power: 245.000\n",
+      "Round  50 pp, Accuracy 47.520, Loss 2.491, Accum Power: 355.000\n",
+      "Round  51 fedavg, Accuracy 51.510, Loss 1.894, Accum Power: 2884.000\n",
+      "Round  51 ibcs, Accuracy 46.500, Loss 2.538, Accum Power: 309.000\n",
+      "Round  51 pp, Accuracy 47.520, Loss 2.521, Accum Power: 427.000\n",
+      "Round  52 fedavg, Accuracy 50.940, Loss 1.939, Accum Power: 2957.000\n",
+      "Round  52 ibcs, Accuracy 46.740, Loss 2.549, Accum Power: 309.000\n",
+      "Round  52 pp, Accuracy 47.220, Loss 2.511, Accum Power: 427.000\n",
+      "Round  53 fedavg, Accuracy 51.170, Loss 1.933, Accum Power: 2957.000\n",
+      "Round  53 ibcs, Accuracy 46.840, Loss 2.567, Accum Power: 309.000\n",
+      "Round  53 pp, Accuracy 47.310, Loss 2.533, Accum Power: 427.000\n",
+      "Round  54 fedavg, Accuracy 51.370, Loss 1.930, Accum Power: 3037.000\n"
      ]
     }
    ],
@@ -3568,17 +3732,18 @@
     "#Inintalization()\n",
     "# original state_0&_1\n",
     "#lam = 0.1\n",
-    "# 100 global epochs\n",
-    "# 3 local epochs instead of 10\n",
+    "# 1000 global epochs\n",
+    "# 10 local epoch\n",
+    "# 32 batch size\n",
     "# Three algorithms (FedAvg, ibcs, pp)\n",
-    "# latest changes (Aug, 21 2023 at 6:10 pm)\n",
+    "# latest changes (Aug, 21 2023 at 9:06 pm)\n",
     "!python3 fedavg_vs_ibcs_cifar.py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a2bcf61",
+   "id": "e61a0ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3696,7 +3861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7d6142",
+   "id": "124282c1",
    "metadata": {},
    "outputs": [],
    "source": []
